--- a/siprel/prestamos/templates/prestamos/inicio.html
+++ b/siprel/prestamos/templates/prestamos/inicio.html
@@ -1,8 +1,9 @@
-{% extends 'prestamos/base.html' %}
-
-{% block title %}Inicio{% endblock %}
-
-{% block content %}
-    <h2>Bienvenido al sistema SIPREL</h2>
-    <p>Este es el inicio del sistema de préstamos.</p>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Inicio</title>
+</head>
+<body>
+    <h1>¡Bienvenido a SIPREL!</h1>
+</body>
+</html>
