--- a/siprel/prestamos/templates/solicitud_exitosa.html
+++ b/siprel/prestamos/templates/solicitud_exitosa.html
@@ -1,11 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>¡Solicitud Enviada!</title>
+    <meta charset="UTF-8">
+    <title>Solicitud Enviada</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body>
-    <h1>Gracias por tu solicitud</h1>
-    <p>Tu solicitud ha sido registrada con éxito.</p>
-    <a href="/">Volver al inicio</a>
+<body class="bg-light">
+
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6">
+            <div class="card shadow text-center">
+                <div class="card-header bg-success text-white">
+                    <h4>¡Solicitud Enviada!</h4>
+                </div>
+                <div class="card-body">
+                    <p class="lead">Gracias por tu solicitud.<br>Ha sido registrada con éxito.</p>
+                    <a href="/" class="btn btn-primary">Volver al inicio</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
